# OfferPilot

./: .env.example  .gitignore  Makefile  README.md  environment.yml  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  deploy-web.yml
apps/web/: .dockerignore  .env.example  Dockerfile  README.md  eslint.config.js  index.html  nginx.conf  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
docs/: 01-requirements-analysis.md  02-system-architecture-design.md  03-detailed-design.md  04-ai-native-interaction-ui-design.md  P7-SECURITY-IMPLEMENTATION.md  README.md  debug-mode.md  deployment.md  development.md  summary-report.md  task.md
infra/: .env.example  README.md  docker-compose.yml
services/api/: .dockerignore  .env.debug  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
services/api/app/: __init__.py  main.py
services/api/app/ai/: __init__.py  embedding.py  extraction.py  orchestration.py  recommendation.py  rewrite.py  skills.py
services/api/app/ai/providers/: __init__.py  base.py  factory.py  fake.py  openai_compatible.py
services/api/app/ai/scoring/: __init__.py  engine.py  suggestions.py  weights.py
services/api/app/api/: __init__.py
services/api/app/api/v1/: __init__.py  health.py
services/api/app/db/: __init__.py  base.py  registry.py  repository.py  session.py  types.py
services/api/app/db/migrations/: env.py
services/api/app/db/migrations/versions/: 52409b52db03_initial_schema.py  a1b2c3d4e5f6_add_job_favorites.py
services/api/app/modules/: __init__.py
services/api/app/modules/admin/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
services/api/app/modules/application/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
services/api/app/modules/audit/: __init__.py  models.py  service.py
services/api/app/modules/auth/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
services/api/app/modules/job/: __init__.py  importer.py  models.py  repository.py  router.py  schemas.py  service.py
services/api/app/modules/job_discovery/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
services/api/app/modules/match/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
services/api/app/modules/profile/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
services/api/app/modules/recommendation/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
services/api/app/modules/report/: __init__.py  export.py  models.py  repository.py  router.py  schemas.py  service.py
services/api/app/modules/resume/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
services/api/app/modules/resume_rewrite/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
services/api/app/scripts/: __init__.py  seed_demo.py
services/api/app/shared/: __init__.py  config.py  context.py  deps.py  documents.py  errors.py  logging.py  middleware.py  ratelimit.py  responses.py  security.py  storage.py
services/api/app/workers/: __init__.py  main.py  tasks.py
services/api/tests/: conftest.py  test_admin.py  test_ai_foundation.py  test_application.py  test_auth.py  test_discovery_recommendation.py  test_favorites.py  test_health.py  test_job.py  test_job_import.py  test_match_report.py  test_profile.py  test_ratelimit.py  test_report_export.py  test_resume.py  test_resume_rewrite.py  test_scoring.py  test_security.py
(+100 files in other folders)
