[project]
name = "offerpilot-api"
version = "0.1.0"
description = "OfferPilot (Offer 捕手) backend — student job-matching AI assistant"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }

# Runtime dependencies. This is the single source of truth for both local
# (uv pip install) and container (Docker) builds.
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.32,<1.0",
  "pydantic>=2.9,<3.0",
  "pydantic-settings>=2.6,<3.0",
  "sqlalchemy[asyncio]>=2.0.36,<3.0",
  "alembic>=1.14,<2.0",
  "asyncpg>=0.30,<1.0",
  "redis>=5.2,<6.0",
  "arq>=0.26,<1.0",
  "httpx>=0.28,<1.0",
  "structlog>=24.4",
  "orjson>=3.10",
  "pyjwt>=2.10,<3.0",
  "argon2-cffi>=23.1",
  "python-multipart>=0.0.20",
  "pgvector>=0.3.6",
  "tenacity>=9.0",
  "email-validator>=2.2",
]

[project.optional-dependencies]
# Document parsing — pulled in starting at phase P2 (resume/JD ingestion).
parsing = [
  "pypdf>=5.1",
  "python-docx>=1.1",
]
# Development & CI tooling.
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "pytest-cov>=6.0",
  "anyio>=4.6",
  "asgi-lifespan>=2.1",
  "aiosqlite>=0.20",
  "ruff>=0.8",
  "mypy>=1.13",
  "types-redis",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# ---------------------------------------------------------------------------
# Ruff — linter + formatter
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["app", "tests"]
# Autogenerated Alembic migration scripts are not hand-maintained.
extend-exclude = ["app/db/migrations/versions"]

[tool.ruff.lint]
select = [
  "E", "F", "W",   # pyflakes / pycodestyle
  "I",             # isort
  "N",             # pep8-naming
  "UP",            # pyupgrade
  "B",             # bugbear
  "C4",            # comprehensions
  "SIM",           # simplify
  "RUF",           # ruff-specific
]
ignore = [
  "B008",     # function call in default arg — FastAPI Depends() pattern
  "RUF001",   # ambiguous unicode char in string — expected (zh-CN UI copy)
  "RUF002",   # ambiguous unicode char in docstring — expected (zh-CN)
  "RUF003",   # ambiguous unicode char in comment — expected (zh-CN)
  "UP046",    # keep explicit Generic[T] base for Pydantic v2 generic models
  "UP047",    # keep explicit TypeVar on generic functions for clarity
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

# ---------------------------------------------------------------------------
# mypy — static typing
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
ignore_missing_imports = true
exclude = ["app/db/migrations/"]

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra -q --strict-markers"
filterwarnings = [
  "error",
  # Third-party libraries still emit deprecation warnings we don't control.
  "ignore::DeprecationWarning",
  "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["app"]
omit = ["app/db/migrations/*"]
